amber/amber.css
.amber {
  background: url('../images/amber-background.png') repeat;
  background-size: 270px 270px;
  max-width: 100%;
}

.amber .flex {
    display: flex;
    margin: auto;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

.amber .info {
  flex: 1;
}

.amber .info .figure {
  margin-top: 0em;
}

.amber #amber-amount {
  font-size: 3em;
}

.amber .button {
  font-size: 4em;
  height: 100%;
  background: rgba(155, 155, 155, 0.1);
  flex: 2;
}

.amber .button span {
  background: #f0f0f0;
}

.amber .plus {

}

.amber .minus {

}

